# linting-tutorial

./: README.md  noxfile.py  pyproject.toml
ltut/: WhatsNext.md  initial_example.py
ltut/level_1/: README.md  example.py
ltut/level_2/: README.md  example.py
ltut/level_3/: README.md  example.py
ltut/level_4/: README.md  example.py
ltut/level_5/: README.md  example.py
ltut/level_6/: README.md  example.py
ltut/level_6_solution/: example.py
ltut/mypy_1/: README.md
ltut/mypy_2/: README.md  example.py  solution.py
ltut/mypy_3/: README.md  example.py  solution.py
ltut/mypy_4/: README.md  example.py  solution.py
ltut/mypy_5/: README.md  example.py  solution.py
